Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29799

cmake: regression with `source_group` organized sources

XMLWordPrintable

    • 973e9dcf9 (12.0), 7affb80fc (12.0)

      https://codereview.qt-project.org/c/qt-creator/qt-creator/+/513304 caused a regression for me: the path

      new (bad) behaviour:

      old (good) behaviour:

      the file is in `inc/ni/linux/coarse_clocks.h`, the folder is now applied twice.

      the cmake code in question is `source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES inc/ni/linux/coarse_clocks.h)`

        For Gerrit Dashboard: QTCREATORBUG-29799
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            timblechmann tim blechmann
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes